# Google-Code-Jam

./: .gitignore  CMakeLists.txt  minimum_scalar_product.cpp
2008/: CMakeLists.txt
2008/Qualification/: CMakeLists.txt  Problem_Statements.md  Readme.md  fly_swatter.cpp  saving_the_universe.cpp  train_timetable.cpp
2008/Round1A/: CMakeLists.txt  Readme.md  milkshake.cpp
2008/Round1B/: CMakeLists.txt  Readme.md  crop_triangles.cpp
2008/Round1C/: Readme.md
2008/Round2/: Readme.md
2010/: CMakeLists.txt
2010/Qualification/: CMakeLists.txt  reverse_words.cpp  t9_spelling.cpp
2011/: CMakeLists.txt
2011/finals/: CMakeLists.txt  runs.cpp
