cmake_minimum_required (VERSION 2.6)
project(Google-Code-Jam)

set(CMAKE_CXX_FLAGS "-Wall -Wpedantic -Werror -Wfatal-errors -std=c++11 -O2")

add_subdirectory(2008)
#add_subdirectory(2009)
add_subdirectory(2010)
add_subdirectory(2011)
#add_subdirectory(2012)
#add_subdirectory(2013)
#add_subdirectory(2014)
#add_subdirectory(2015)

